--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Support | Get Help with Your Devices</title>
-    <meta name="description" content="Official Microsoft support. Get help with setup, troubleshooting, and technical issues. Expert support available 24/7 for all Microsoft devices.">
+    <meta name="description" content="Official Customer support. Get help with setup, troubleshooting, and technical issues. Expert support available 24/7 for all devices.">
     <style>
         * {
             margin: 0;
@@ -881,3 +881,4 @@
     
 </body>
 </html>
+
