--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         
         body {
-            font-family: -Microsoft-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: ;
             line-height: 1.6;
             color: #333;
             background: #ffffff;
@@ -881,4 +881,5 @@
     
 </body>
 </html>
+
 
